WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136836
Cannot start a drag inside a shadow tree when an inclusive-ancestor of its shadow host is a draggable element
https://bugs.webkit.org/show_bug.cgi?id=136836
Summary
Cannot start a drag inside a shadow tree when an inclusive-ancestor of its sh...
Jer Noble
Reported
2014-09-15 14:23:03 PDT
Investigate whether drags from within the shadow DOM should initiate drag events targetting the hosting element.
Attachments
Fixes the bug
(10.34 KB, patch)
2018-09-21 00:57 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(8.31 MB, application/zip)
2018-09-21 02:49 PDT
,
EWS Watchlist
no flags
Details
Skip the tests on iOS for real
(11.15 KB, patch)
2018-09-21 16:28 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixed GTK+ build
(11.55 KB, patch)
2018-09-21 21:52 PDT
,
Ryosuke Niwa
wenson_hsieh
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2017-10-09 22:06:57 PDT
(In reply to Jer Noble from
comment #0
)
> Investigate whether drags from within the shadow DOM should initiate drag > events targetting the hosting element.
It should!
Radar WebKit Bug Importer
Comment 2
2018-08-01 22:29:30 PDT
<
rdar://problem/42842787
>
Ryosuke Niwa
Comment 3
2018-09-20 22:43:48 PDT
***
Bug 187940
has been marked as a duplicate of this bug. ***
Ryosuke Niwa
Comment 4
2018-09-20 23:27:51 PDT
***
Bug 186994
has been marked as a duplicate of this bug. ***
Ryosuke Niwa
Comment 5
2018-09-21 00:57:52 PDT
Created
attachment 350336
[details]
Fixes the bug
EWS Watchlist
Comment 6
2018-09-21 02:49:53 PDT
Comment on
attachment 350336
[details]
Fixes the bug
Attachment 350336
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/9293579
New failing tests: fast/shadow-dom/dragging-element-with-shadow-tree.html fast/shadow-dom/dragging-element-inside-shadow-tree.html
EWS Watchlist
Comment 7
2018-09-21 02:49:55 PDT
Created
attachment 350343
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Ryosuke Niwa
Comment 8
2018-09-21 16:06:02 PDT
WTF!? Why is iOS WK2 running these tests?
Ryan Haddad
Comment 9
2018-09-21 16:27:19 PDT
(In reply to Ryosuke Niwa from
comment #8
)
> WTF!? Why is iOS WK2 running these tests?
This pre-existing TestExpectations entry is probably to blame: LayoutTests/platform/ios/TestExpectations:781:
webkit.org/b/148695
fast/shadow-dom [ Pass ]
Ryosuke Niwa
Comment 10
2018-09-21 16:28:46 PDT
Created
attachment 350452
[details]
Skip the tests on iOS for real
Ryosuke Niwa
Comment 11
2018-09-21 21:52:04 PDT
Created
attachment 350496
[details]
Fixed GTK+ build
Ryosuke Niwa
Comment 12
2018-09-22 01:11:25 PDT
Thanks for the review!
Ryosuke Niwa
Comment 13
2018-09-22 01:13:54 PDT
Committed
r236384
: <
https://trac.webkit.org/changeset/236384
>
Lucas Forschler
Comment 14
2019-02-06 09:19:05 PST
Mass move bugs into the DOM component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug